# simplecaptcha-bot

./: .flake8  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  config_example.ini  docker-compose.yml  pyproject.toml  redis.conf
app/: __main__.py
app/data_structures/: arq.py  callback_data.py  captcha.py  fluent.py  redis.py
app/db/models/: chat.py
app/db/storages/: base.py  chat.py  factory.py
app/db/use_cases/: base.py  chat_register.py  chat_settings.py
app/filters/: chat_type.py  has_permissions.py
app/handlers/: __init__.py
app/handlers/chat/: __init__.py  callback_query.py  chat_join_request.py  message.py  my_chat_member.py
app/handlers/globals/: __init__.py  errors.py
app/handlers/private/: __init__.py  callback_query.py  message.py
app/middlewares/: db.py  entities.py  lang.py  setup.py
app/misc/: configure.py  exceptions.py  filename_utils.py  kb_generators.py  loggers.py  paths.py  settings_reader.py  uuid.py  webhook.py
app/services/: captcha.py  captcha_generator.py  captcha_scheduler.py  fluent.py  lock_user.py  redis.py  scheduler.py
app/services/content_generators/: base.py  factory.py  keyboard.py  text.py
assets/: mapping.json
migrations/: env.py
migrations/versions/: 490821dcf274_create_chats_table.py
resources/: mapping.json
resources/text/en/: messages.ftl
resources/text/ru/: messages.ftl
worker/: __main__.py
worker/tasks/: join_expired.py
