[tool.poetry]
name = "captchabot"
version = "0.1.0"
description = ""
authors = ["Mikhail Smolnikov <smolnik.mikhail@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "3.0.0b3"
arq = "^0.22"
redis = ">=4.2.0rc1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
